# alternativka-progress

./: .gitignore  Cargo.toml  README.md  Trunk.toml  alternativka-progress-5177d1414e6783b9.js  alternativka-progress-5177d1414e6783b9_bg.wasm  alternativka-progress-9f8970b926418285.js  alternativka-progress-9f8970b926418285_bg.wasm  alternativka-progress-a750659431dd88d1.js  alternativka-progress-a750659431dd88d1_bg.wasm  alternativka-progress-bd52471c29d852a.js  alternativka-progress-bd52471c29d852a_bg.wasm  alternativka-progress-dd26d611c72d27ce.js  alternativka-progress-dd26d611c72d27ce_bg.wasm  alternativka-progress-e6c042c06dd8aeb2.js  alternativka-progress-e6c042c06dd8aeb2_bg.wasm  alternativka-progress-f38b2dcafde19ae4.js  alternativka-progress-f38b2dcafde19ae4_bg.wasm  index-compiled-59149f0423f4e4b6.css  index-compiled-70cbab821bea3ca3.css  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yml
src/: app.rs
